# AI_code_reviewer

./: .env.sample  README.md  action.yml  pyproject.toml
.github/workflows/: pr-review.yml
src/: review_pr.py  test_locally.py
